<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.InfoUserActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="139dp"
        android:text="@string/text_InfoUser"
        android:textColor="@color/verde_3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgViewPhotoUser"
        android:layout_width="106dp"
        android:layout_height="105dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/img_perfil_usuario_defecto"
        app:layout_constraintHorizontal_bias="0.1"/>

    <TextView
        android:id="@+id/tvNombreUser2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="textStart"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/text_nombreUser"
        android:textColor="@color/verde_3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgViewPhotoUser"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <ImageButton
        android:id="@+id/imagBtnIconTelefono2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgViewPhotoUser"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreUser2"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvNumTelefonico2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:text="@string/text_numTel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagBtnIconTelefono2"
        app:layout_constraintTop_toBottomOf="@id/tvNombreUser2"
        app:layout_constraintHorizontal_bias="0.0"/>

    <ImageButton
        android:id="@+id/imagBtnIconEMail2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgViewPhotoUser"
        app:layout_constraintTop_toBottomOf="@+id/imagBtnIconTelefono2"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:text="@string/text_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagBtnIconEMail2"
        app:layout_constraintTop_toBottomOf="@id/tvNumTelefonico2"
        app:layout_constraintHorizontal_bias="0.0"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewPhotoUser">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-185dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutInferiorScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPublicaciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_InfoPublic"
                    android:textColor="@color/verde_3"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RViewPostsUsers"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/btnVolver"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPublicaciones" />

                <Button
                    android:id="@+id/btnVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="500dp"
                    android:backgroundTint="@color/verde_3"
                    android:text="Regresar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPublicaciones" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressCircularPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>